--- a/BlogHealth/BlogHealth.csproj
+++ b/BlogHealth/BlogHealth.csproj
@@ -89,9 +89,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="HomeAsset\css\bootstrap.css" />
@@ -119,13 +116,14 @@
     <Content Include="HomeAsset\img\svg\arrow_right.svg" />
     <Content Include="HomeAsset\js\bootstrap.js" />
     <Content Include="HomeAsset\js\bootstrap.min.js" />
+    <Content Include="HomeAsset\js\jquery-3.2.1.js" />
     <Content Include="HomeAsset\js\jquery-3.2.1.min.js" />
     <Content Include="HomeAsset\js\mdb.js" />
     <Content Include="HomeAsset\js\mdb.min.js" />
     <Content Include="HomeAsset\js\popper.min.js" />
+    <Content Include="HomeAsset\js\ResizeSensor.js" />
+    <Content Include="HomeAsset\js\theia-sticky-sidebar.js" />
     <Content Include="Images\hv.jpg" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="HomeAsset\font\roboto\Roboto-Bold.eot" />
     <Content Include="HomeAsset\font\roboto\Roboto-Bold.ttf" />
     <Content Include="HomeAsset\font\roboto\Roboto-Bold.woff" />
@@ -179,10 +177,6 @@
     <Content Include="HomeAsset\font\font-awesome-4.7.0\scss\_screen-reader.scss" />
     <Content Include="HomeAsset\font\font-awesome-4.7.0\scss\_stacked.scss" />
     <Content Include="HomeAsset\font\font-awesome-4.7.0\scss\_variables.scss" />
-    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -202,7 +196,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Scripts\jquery-1.10.2.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
