--- a/BlogHealth/BlogHealth.csproj
+++ b/BlogHealth/BlogHealth.csproj
@@ -1,4 +1,5 @@
-﻿<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -193,6 +194,16 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-Bold.ttf" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-BoldItalic.ttf" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-ExtraBold.ttf" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-ExtraBoldItalic.ttf" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-Italic.ttf" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-Light.ttf" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-LightItalic.ttf" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-Regular.ttf" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-SemiBold.ttf" />
+    <Content Include="HomeAsset\font\Opensans\OpenSans-SemiBoldItalic.ttf" />
     <None Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
