--- a/BlogHealth/BlogHealth.csproj
+++ b/BlogHealth/BlogHealth.csproj
@@ -101,6 +101,7 @@
     <Content Include="HomeAsset\font\font-awesome-4.7.0\css\font-awesome.min.css" />
     <Content Include="HomeAsset\font\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
     <Content Include="HomeAsset\font\font-awesome-4.7.0\HELP-US-OUT.txt" />
+    <Content Include="HomeAsset\HelpContent.txt" />
     <Content Include="HomeAsset\img\lightbox\default-skin.png" />
     <Content Include="HomeAsset\img\lightbox\default-skin.svg" />
     <Content Include="HomeAsset\img\lightbox\preloader.gif" />
@@ -125,6 +126,7 @@
     <Content Include="HomeAsset\js\popper.min.js" />
     <Content Include="HomeAsset\js\ResizeSensor.js" />
     <Content Include="HomeAsset\js\theia-sticky-sidebar.js" />
+    <Content Include="Images\3-35-324x235.png" />
     <Content Include="Images\hv.jpg" />
     <Content Include="HomeAsset\font\roboto\Roboto-Bold.eot" />
     <Content Include="HomeAsset\font\roboto\Roboto-Bold.ttf" />
@@ -209,6 +211,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Post.cshtml" />
+    <Content Include="Views\Home\Posts.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
