add theme admin

--- a/BlogHealth/BlogHealth.csproj
+++ b/BlogHealth/BlogHealth.csproj
@@ -90,6 +90,39 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AdminAsset\css\bootstrap.css" />
+    <Content Include="AdminAsset\css\bootstrap.min.css" />
+    <Content Include="AdminAsset\css\mdb.css" />
+    <Content Include="AdminAsset\css\mdb.min.css" />
+    <Content Include="AdminAsset\css\style.css" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\css\font-awesome.css" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\css\font-awesome.min.css" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\HELP-US-OUT.txt" />
+    <Content Include="AdminAsset\img\lightbox\default-skin.png" />
+    <Content Include="AdminAsset\img\lightbox\default-skin.svg" />
+    <Content Include="AdminAsset\img\lightbox\preloader.gif" />
+    <Content Include="AdminAsset\img\overlays\01.png" />
+    <Content Include="AdminAsset\img\overlays\02.png" />
+    <Content Include="AdminAsset\img\overlays\03.png" />
+    <Content Include="AdminAsset\img\overlays\04.png" />
+    <Content Include="AdminAsset\img\overlays\05.png" />
+    <Content Include="AdminAsset\img\overlays\06.png" />
+    <Content Include="AdminAsset\img\overlays\07.png" />
+    <Content Include="AdminAsset\img\overlays\08.png" />
+    <Content Include="AdminAsset\img\overlays\09.png" />
+    <Content Include="AdminAsset\img\svg\arrow_left.svg" />
+    <Content Include="AdminAsset\img\svg\arrow_right.svg" />
+    <Content Include="AdminAsset\js\bootstrap.js" />
+    <Content Include="AdminAsset\js\bootstrap.min.js" />
+    <Content Include="AdminAsset\js\jquery-3.2.1.js" />
+    <Content Include="AdminAsset\js\jquery-3.2.1.min.js" />
+    <Content Include="AdminAsset\js\mdb.js" />
+    <Content Include="AdminAsset\js\mdb.min.js" />
+    <Content Include="AdminAsset\js\Myscript.js" />
+    <Content Include="AdminAsset\js\popper.min.js" />
+    <Content Include="AdminAsset\js\ResizeSensor.js" />
+    <Content Include="AdminAsset\js\theia-sticky-sidebar.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="HomeAsset\css\bootstrap.css" />
@@ -206,12 +239,76 @@
     <Content Include="HomeAsset\font\Opensans\OpenSans-Regular.ttf" />
     <Content Include="HomeAsset\font\Opensans\OpenSans-SemiBold.ttf" />
     <Content Include="HomeAsset\font\Opensans\OpenSans-SemiBoldItalic.ttf" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\fonts\fontawesome-webfont.eot" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\fonts\fontawesome-webfont.ttf" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\fonts\fontawesome-webfont.woff" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\fonts\fontawesome-webfont.woff2" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\fonts\FontAwesome.otf" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\animated.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\bordered-pulled.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\core.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\fixed-width.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\font-awesome.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\icons.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\larger.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\list.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\mixins.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\path.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\rotated-flipped.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\screen-reader.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\stacked.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\less\variables.less" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_animated.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_bordered-pulled.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_core.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_fixed-width.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_icons.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_larger.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_list.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_mixins.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_path.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_rotated-flipped.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_screen-reader.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_stacked.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\_variables.scss" />
+    <Content Include="AdminAsset\font\font-awesome-4.7.0\scss\font-awesome.scss" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-Bold.ttf" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-BoldItalic.ttf" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-ExtraBold.ttf" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-ExtraBoldItalic.ttf" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-Italic.ttf" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-Light.ttf" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-LightItalic.ttf" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-Regular.ttf" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-SemiBold.ttf" />
+    <Content Include="AdminAsset\font\Opensans\OpenSans-SemiBoldItalic.ttf" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Bold.eot" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Bold.ttf" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Bold.woff" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Bold.woff2" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Light.eot" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Light.ttf" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Light.woff" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Light.woff2" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Medium.eot" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Medium.ttf" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Medium.woff" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Medium.woff2" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Regular.eot" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Regular.ttf" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Regular.woff" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Regular.woff2" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Thin.eot" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Thin.ttf" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Thin.woff" />
+    <Content Include="AdminAsset\font\roboto\Roboto-Thin.woff2" />
     <None Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Post.cshtml" />
     <Content Include="Views\Home\Posts.cshtml" />
+    <Content Include="Views\Home\Test.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
