--- a/BlogHealth/BlogHealth.csproj
+++ b/BlogHealth/BlogHealth.csproj
@@ -62,10 +62,18 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>ckfinder\bin\Debug\CKFinder_Watermark.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -1242,6 +1250,21 @@
     <Content Include="HomeAsset\font\font-awesome-4.7.0\scss\_screen-reader.scss" />
     <Content Include="HomeAsset\font\font-awesome-4.7.0\scss\_stacked.scss" />
     <Content Include="HomeAsset\font\font-awesome-4.7.0\scss\_variables.scss" />
+    <Content Include="Kendo\css\kendo.bootstrap-v4.min.css" />
+    <Content Include="Kendo\css\kendo.common.min.css" />
+    <Content Include="Kendo\js\jszip.min.js" />
+    <Content Include="Kendo\js\kendo.all.min.js" />
+    <Content Include="Kendo\js\kendo.culture.vi.min.js" />
+    <Content Include="Models\BlogHealthDB.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>BlogHealthDB.Context.cs</LastGenOutput>
+      <DependentUpon>BlogHealthDB.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\BlogHealthDB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>BlogHealthDB.edmx</DependentUpon>
+      <LastGenOutput>BlogHealthDB.cs</LastGenOutput>
+    </Content>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -1250,6 +1273,24 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BlogHealthDB.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BlogHealthDB.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BlogHealthDB.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BlogHealthDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BlogHealthDB.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BlogHealthDB.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Categories.cs">
+      <DependentUpon>BlogHealthDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -1354,6 +1395,13 @@
     <Content Include="ckfinder\skins\bootstrap\assets\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="ckfinder\skins\bootstrap\assets\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="ckfinder\userfiles\.htaccess" />
+    <EntityDeploy Include="Models\BlogHealthDB.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>BlogHealthDB.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\BlogHealthDB.edmx.diagram">
+      <DependentUpon>BlogHealthDB.edmx</DependentUpon>
+    </Content>
     <None Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -1363,6 +1411,7 @@
     <Content Include="Views\Home\Test.cshtml" />
     <Content Include="Views\Shared\LayoutAdmin.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\Categories.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -1372,7 +1421,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
