function add category

--- a/BlogHealth/Web.config
+++ b/BlogHealth/Web.config
@@ -41,7 +41,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="BlogHealthEntities" connectionString="metadata=res://*/Models.BlogHealthDB.csdl|res://*/Models.BlogHealthDB.ssdl|res://*/Models.BlogHealthDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=W010925388-001\SQLEXPRESS;initial catalog=BlogHealth;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BlogHealthEntities" connectionString="metadata=res://*/Models.BlogHealthDB.csdl|res://*/Models.BlogHealthDB.ssdl|res://*/Models.BlogHealthDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-6DK60H1;initial catalog=BlogHealth;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
