add material not done

--- a/BlogHealth/BlogHealth.csproj
+++ b/BlogHealth/BlogHealth.csproj
@@ -1316,8 +1316,25 @@
     <Content Include="HomeAsset\font\font-awesome-4.7.0\scss\_screen-reader.scss" />
     <Content Include="HomeAsset\font\font-awesome-4.7.0\scss\_stacked.scss" />
     <Content Include="HomeAsset\font\font-awesome-4.7.0\scss\_variables.scss" />
+    <Content Include="Kendo\css\all.css" />
     <Content Include="Kendo\css\kendo.bootstrap-v4.min.css" />
     <Content Include="Kendo\css\kendo.common.min.css" />
+    <Content Include="Kendo\css\kendo.material.min.css" />
+    <Content Include="Kendo\css\kendo.material.mobile.min.css" />
+    <Content Include="Kendo\css\Material\editor.png" />
+    <Content Include="Kendo\css\Material\imagebrowser.png" />
+    <Content Include="Kendo\css\Material\indeterminate.gif" />
+    <Content Include="Kendo\css\Material\loading-image.gif" />
+    <Content Include="Kendo\css\Material\loading.gif" />
+    <Content Include="Kendo\css\Material\loading_2x.gif" />
+    <Content Include="Kendo\css\Material\markers.png" />
+    <Content Include="Kendo\css\Material\markers_2x.png" />
+    <Content Include="Kendo\css\Material\slider-h.gif" />
+    <Content Include="Kendo\css\Material\slider-v.gif" />
+    <Content Include="Kendo\css\Material\sprite.png" />
+    <Content Include="Kendo\css\Material\sprite_2x.png" />
+    <Content Include="Kendo\css\Material\sprite_kpi.png" />
+    <Content Include="Kendo\css\Material\sprite_kpi_2x.png" />
     <Content Include="Kendo\js\jszip.min.js" />
     <Content Include="Kendo\js\kendo.all.min.js" />
     <Content Include="Kendo\js\kendo.culture.vi.min.js" />
