--- a/BlogHealth/BlogHealth.csproj
+++ b/BlogHealth/BlogHealth.csproj
@@ -147,6 +147,7 @@
     <Content Include="AdminAsset\js\Myscript.js" />
     <Content Include="AdminAsset\js\popper.min.js" />
     <Content Include="AdminAsset\js\ResizeSensor.js" />
+    <Content Include="AdminAsset\js\speakingurl.min.js" />
     <Content Include="ckeditor\adapters\jquery.js" />
     <Content Include="ckeditor\build-config.js" />
     <Content Include="ckeditor\ckeditor.js" />
